# RetailIQ_Platform

./: .gitignore  .pre-commit-config.yaml  Project_plan.md  Project_plan.md.md  README.md  pyproject.toml  requirements.txt
docs/: dictionary.md  learnings.md
notebooks/: 01_eda.ipynb  02_segmentation.ipynb
reports/: sweetviz_eda.html
src/data/: clean.py  explore_sql.py  load_retail.py
src/features/: rfm.py
